force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/InformacoesFinanceirasOportunidade__c.object-meta.xml
<CustomObject>
    <label>Informações financeiras da oportunidade</label>
    <nameField>
        <displayFormat>IFO-{0000}</displayFormat>
        <label>Informações financeiras da oportunidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informações financeiras da oportunidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>