force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>