force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/dataDeInicioDoContrato__c.field-meta.xml
<CustomField>
    <fullName>dataDeInicioDoContrato__c</fullName>
    <formula>Contrato__r.DataInicioContrato__c</formula>
    <label>Data de inicio do contrato</label>
    <type>Date</type>
</CustomField>