force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/DataFimDoContrato__c.field-meta.xml
<CustomField>
    <fullName>DataFimDoContrato__c</fullName>
    <formula>Contrato__r.DataFimContrato__c</formula>
    <label>Data fim do contrato</label>
    <type>Date</type>
</CustomField>