force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/InformacesFinanceirasConta__c.field-meta.xml
<CustomField>
    <fullName>InformacesFinanceirasConta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informações financeiras da conta</label>
    <referenceTo>InformcoesFinanceirasConta__c</referenceTo>
    <relationshipLabel>Informações financeiras da oportunidade</relationshipLabel>
    <relationshipName>InformacoesFinanceirasOportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>