force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/ModalidadeRenda__c.field-meta.xml
<CustomField>
    <fullName>ModalidadeRenda__c</fullName>
    <label>Modalidade da renda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>Empresário</fullName>
            </value>
            <value>
                <fullName>Autônomo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>