force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Informações financeiras da oportunidade</relationshipLabel>
    <relationshipName>InformacoesFinanceirasOportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>