force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/pendente__c.field-meta.xml
<CustomField>
    <fullName>pendente__c</fullName>
    <formula>Contrato__r.PercentualPendente__c</formula>
    <label>pendente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>