force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/PercentualIntegrado__c.field-meta.xml
<CustomField>
    <fullName>PercentualIntegrado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo booleano que será alterado para verdadeiro caso o Contrato seja assinado, evitando que a informação de garantia seja excluída.</description>
    <label>% integrado</label>
    <type>Checkbox</type>
</CustomField>