force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/PercentualInvestimento__c.field-meta.xml
<CustomField>
    <fullName>PercentualInvestimento__c</fullName>
    <inlineHelpText>Destino: Informar o percentual que deverá ser creditado na conta do cliente.
Origem: Informar o percentual do valor total que irá sair da conta em questão para o investimento.</inlineHelpText>
    <label>% de investimento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>