force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/PercentualPendente__c.field-meta.xml
<CustomField>
    <fullName>PercentualPendente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>% pendente</label>
    <type>Checkbox</type>
</CustomField>