force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/prazoDoContrato__c.field-meta.xml
<CustomField>
    <fullName>prazoDoContrato__c</fullName>
    <formula>Contrato__r.PrazoContrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo do contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>