force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <label>Profissão</label>
    <length>50</length>
    <type>Text</type>
</CustomField>