force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/RendaComplementar__c.field-meta.xml
<CustomField>
    <fullName>RendaComplementar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renda complementar</label>
    <type>Checkbox</type>
</CustomField>