force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/RendaPrincipal__c.field-meta.xml
<CustomField>
    <fullName>RendaPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renda principal</label>
    <type>Checkbox</type>
</CustomField>