force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/TempoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>TempoEmpresa__c</fullName>
    <label>Tempo de empresa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>