force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/TipoInformacao__c.field-meta.xml
<CustomField>
    <fullName>TipoInformacao__c</fullName>
    <label>Tipo da informação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dado bancário</fullName>
            </value>
            <value>
                <fullName>Renda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>