force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/TipoRenda__c.field-meta.xml
<CustomField>
    <fullName>TipoRenda__c</fullName>
    <label>Tipo de renda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Complementar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>