force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/TipoRendaComplementar__c.field-meta.xml
<CustomField>
    <fullName>TipoRendaComplementar__c</fullName>
    <label>Tipo Renda Complementar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro-labore</fullName>
            </value>
            <value>
                <fullName>Aluguel</fullName>
            </value>
            <value>
                <fullName>Relação de faturamento</fullName>
            </value>
            <value>
                <fullName>Extrato</fullName>
            </value>
            <value>
                <fullName>IRPF</fullName>
            </value>
            <value>
                <fullName>IRPJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>