force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/TipoTransacao__c.field-meta.xml
<CustomField>
    <fullName>TipoTransacao__c</fullName>
    <label>Tipo de transação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Origem</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Devolução</label>
            </value>
            <value>
                <fullName>I/O</fullName>
                <label>Origem e devolução</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>