force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Utilizado__c</fullName>
    <label>% Utilizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>