force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/fields/ValorDoContrato__c.field-meta.xml
<CustomField>
    <fullName>ValorDoContrato__c</fullName>
    <description>Valor do Contrato</description>
    <formula>Contrato__r.ValorContrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor do contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>