force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/recordTypes/CadastrarRenda.recordType-meta.xml
<RecordType>
    <fullName>CadastrarRenda</fullName>
    <active>true</active>
    <description>Cadastro de renda do cliente e as rendas complementares.</description>
    <label>Cadastrar Renda</label>
</RecordType>