force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/recordTypes/DadosBancarios.recordType-meta.xml
<RecordType>
    <fullName>DadosBancarios</fullName>
    <active>true</active>
    <description>Cadastro dos dados de agencia e conta e informações relacionadas do cliente da oportunidade.</description>
    <label>Dados bancários</label>
</RecordType>