force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/recordTypes/Garantia.recordType-meta.xml
<RecordType>
    <fullName>Garantia</fullName>
    <active>true</active>
    <description>Para relacionar uma debênture em garantia no caso de empréstimo com investimento em garantia</description>
    <label>Garantia</label>
</RecordType>