force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/recordTypes/Informacoes_financeiras_da_conta.recordType-meta.xml
<RecordType>
    <fullName>Informacoes_financeiras_da_conta</fullName>
    <active>true</active>
    <description>Para relacionar o dado bancário ou renda do cliente relacionado a oportunidade</description>
    <label>Informações financeiras da conta</label>
</RecordType>