force-app/main/default/objects/InformacoesFinanceirasOportunidade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TipoInformacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>